<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_gradient"
    android:id="@+id/Main_Sign_In_Page"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Sign_In_Fragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_margin="10dp"
        android:paddingStart="5dp"
        android:paddingEnd="5dp">

        <ImageView
            android:layout_width="130dp"
            android:layout_height="130dp"
            android:src="@drawable/sign_in_logo"
            android:layout_marginTop="20dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/welcome_back"
            android:textSize="30sp"
            android:textColor="#000"
            android:textStyle="bold"
            android:fontFamily="sans-serif"
            android:gravity="center"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sign_in_to_access_your_subcriptions_and_spending_insights"
            android:fontFamily="sans-serif"
            android:textSize="14sp"
            android:textColor="#747880"
            android:gravity="center"
            android:layout_marginTop="10dp"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/gmail_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:boxCornerRadiusTopStart="12dp"
            app:boxCornerRadiusTopEnd="12dp"
            app:boxCornerRadiusBottomStart="12dp"
            app:boxCornerRadiusBottomEnd="12dp"
            app:startIconDrawable="@drawable/mail_logo"
            app:boxStrokeColor="#00754E"
            app:boxBackgroundColor="#f5f5f5"
            app:hintTextColor="#00754e"
            app:useMaterialThemeColors="false"
            android:layout_marginTop="20dp"
            app:cursorColor="#808080"
            app:endIconMode="clear_text">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/gmail_editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/gmail"
                android:inputType="text"
                android:paddingStart="50dp"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:boxCornerRadiusTopStart="12dp"
            app:boxCornerRadiusTopEnd="12dp"
            app:boxCornerRadiusBottomStart="12dp"
            app:boxCornerRadiusBottomEnd="12dp"
            app:endIconMode="password_toggle"
            app:startIconDrawable="@drawable/password_logo"
            app:boxStrokeColor="#00754E"
            app:boxBackgroundColor="#f5f5f5"
            app:hintTextColor="#00754e"
            app:useMaterialThemeColors="false"
            android:layout_marginTop="10dp"
            app:cursorColor="#808080">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password_editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:paddingStart="50dp"
                android:textColorHint="#000000"
                android:maxLength="15"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.checkbox.MaterialCheckBox
            android:id="@+id/rememberMe"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/remember_me"
            android:layout_gravity="start"
            android:shadowColor="#808080"
            app:buttonTint="@color/checkbox_fill_color"/>
        
        <com.google.android.material.button.MaterialButton
            android:id="@+id/forgetPassword"
            style="?attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forget_password"
            android:textColor="#f73c2f"
            android:layout_gravity="end"
            android:layout_marginTop="-50dp"
            android:textSize="13sp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/by_clicking_sign_in_i_have_read_and_agree_with_the"
            android:textSize="14sp"
            android:textColor="#747880"
            android:layout_marginTop="5dp"
            android:gravity="start"
            android:paddingStart="5dp"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/terms_policies"
            style="?attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/terms_sheet_privacy_policy"
            android:textSize="14sp"
            android:textColor="#000000"
            android:layout_gravity="start"
            android:layout_marginTop="-10dp"
            android:paddingStart="5dp"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/signInBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/button_bg_color"
            android:text="@string/sign_in"
            android:textSize="17sp"
            app:backgroundTint="@null" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginTop="10dp">
            <com.google.android.material.divider.MaterialDivider
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="15dp"
                app:dividerColor="#e3dfde"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/or"
                android:textSize="15sp"
                android:textColor="#7a7979"
                android:layout_marginEnd="15dp"/>

            <com.google.android.material.divider.MaterialDivider
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                app:dividerColor="#e3dfde"/>
        </LinearLayout>
        <com.google.android.material.button.MaterialButton
            style="?attr/materialIconButtonOutlinedStyle"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/sign_in_with_apple"
            android:textColor="@color/black"
            app:cornerRadius="8dp"
            app:icon="@drawable/apple_logo"
            app:iconTint="@null"
            android:gravity="center"
            app:iconGravity="textStart"
            app:iconPadding="13dp"
            app:iconSize="28dp"
            android:layout_marginTop="10dp"/>

        <com.google.android.material.button.MaterialButton
            style="?attr/materialIconButtonOutlinedStyle"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:text="@string/sign_in_with_google"
            android:textColor="@color/black"
            app:cornerRadius="8dp"
            app:icon="@drawable/google"
            app:iconGravity="textStart"
            app:iconPadding="15dp"
            app:iconTint="@null" />

        <LinearLayout
            android:id="@+id/llCA"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/don_t_have_an_account"
                android:textSize="12sp"
                android:textColor="#8a8787"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/account_creation"
                style="?attr/borderlessButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/create_account"
                android:textColor="#000000"
                android:layout_gravity="start"
                android:paddingStart="5dp"/>

        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>