<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_gradient"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Sign_In_Fragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_margin="10dp"
        android:paddingStart="5dp"
        android:paddingEnd="5dp">

        <ImageView
            android:layout_width="140dp"
            android:layout_height="140dp"
            android:layout_marginTop="10dp"
            android:src="@drawable/set_up_logo" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/complete_your_setup"
            android:textSize="30sp"
            android:textColor="#000"
            android:textStyle="bold"
            android:gravity="center"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:text="@string/tell_us_about_you_for_peronalized_insights"
            android:textColor="#747880"
            android:textSize="14sp" />

        <FrameLayout
            android:layout_width="110dp"
            android:layout_height="110dp"
            android:layout_gravity="center"
            android:layout_marginTop="5dp">
            <ImageView
                android:id="@+id/profileImage"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/input_profile_image"
                android:clipToOutline="true"
                android:scaleType="centerCrop"
                android:background="@drawable/circular_placeholder"
                android:src="@drawable/input_image"/>
            
            <ImageButton
                android:id="@+id/uploadButton"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:layout_gravity="bottom|end"
                android:background="@drawable/circular_placeholder"
                android:src="@drawable/download_logo"
                android:backgroundTint="#00754E" />
        </FrameLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layout_birthday"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:boxCornerRadiusTopStart="12dp"
            app:boxCornerRadiusTopEnd="12dp"
            app:boxCornerRadiusBottomStart="12dp"
            app:boxCornerRadiusBottomEnd="12dp"
            app:startIconDrawable="@drawable/birthday_calender_logo"
            android:layout_marginTop="10dp"
            app:boxStrokeColor="#00754E"
            app:boxBackgroundColor="#f5f5f5"
            app:hintTextColor="#00754e"
            app:useMaterialThemeColors="false"
            app:cursorColor="#808080"
            app:endIconMode="clear_text">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editText_Birthday"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Select Birthday"
                android:inputType="date"
                android:paddingStart="50dp"
                android:focusable="false"
                android:clickable="true"
                android:cursorVisible="false"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layout_currency"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:boxCornerRadiusTopStart="12dp"
            app:boxCornerRadiusTopEnd="12dp"
            app:boxCornerRadiusBottomStart="12dp"
            app:boxCornerRadiusBottomEnd="12dp"
            app:startIconDrawable="@drawable/currency_icon"
            android:layout_marginTop="10dp"
            app:boxStrokeColor="#00754E"
            app:boxBackgroundColor="#f5f5f5"
            app:hintTextColor="#00754e"
            app:useMaterialThemeColors="false">
            <AutoCompleteTextView
                android:id="@+id/currency_menu"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/select_currency"
                android:paddingStart="50dp"
                android:inputType="none"
                android:scrollbars="none"/>
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/track_type"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:layout_marginTop="5dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="5dp">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:background="@drawable/linear_border"
                android:padding="2dp"
                android:paddingStart="5dp"
                android:layout_marginEnd="10dp"
                android:layout_weight="1">

                <com.google.android.material.materialswitch.MaterialSwitch
                    android:id="@+id/subscriptionCheckBox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingEnd="7dp"
                    app:thumbTint="#FFFFFF"
                    app:trackTint="#f2f0f0"
                    app:track="@drawable/switch_track_custom"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Subscription Only"
                    android:textSize="12sp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:background="@drawable/linear_border"
                android:padding="2dp"
                android:paddingStart="5dp"
                android:layout_weight="1">
                <com.google.android.material.materialswitch.MaterialSwitch
                    android:id="@+id/expenseCheckBox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingEnd="7dp"
                    app:thumbTint="#FFFFFF"
                    app:trackTint="#f2f0f0"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Expenses + Subs"
                    android:textSize="12sp"/>
            </LinearLayout>
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/notifications"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:layout_marginTop="5dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="5dp">
            <LinearLayout
                android:layout_width="170dp"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:background="@drawable/linear_border"
                android:padding="2dp"
                android:paddingStart="5dp"
                android:layout_marginEnd="10dp">
                <com.google.android.material.materialswitch.MaterialSwitch
                    android:id="@+id/pushAlertCheckBox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingEnd="7dp"
                    app:thumbTint="#FFFFFF"
                    app:trackTint="#f2f0f0"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Push Alerts"
                    android:textSize="12sp"/>
            </LinearLayout>

        </LinearLayout>

        <com.google.android.material.checkbox.MaterialCheckBox
            android:id="@+id/rememberMeSetUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/by_clicking_sign_in_i_have_read_and_agree_with_the"
            android:layout_gravity="start"
            android:shadowColor="#808080"
            app:buttonTint="@color/checkbox_fill_color"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/terms_policies_setUp"
            style="?attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/terms_sheet_privacy_policy"
            android:textSize="14sp"
            android:textColor="#000000"
            android:layout_gravity="start"
            android:layout_marginTop="-40dp"
            android:paddingStart="5dp"
            android:layout_marginLeft="57dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <com.google.android.material.button.MaterialButton
                android:id="@+id/skipButton"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="match_parent"
                android:layout_height="57dp"
                android:text="Skip"
                android:textSize="15sp"
                android:textColor="#000000"
                app:backgroundTint="#FFFFFF"
                android:layout_weight="1"
                android:layout_marginEnd="10dp"
                app:cornerRadius="8dp"
                app:strokeColor="#dbdad7"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/finishSetupButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/button_bg_color"
                android:text="@string/finish_setup"
                android:textSize="17sp"
                app:backgroundTint="@null"
                android:layout_weight="1"/>
        </LinearLayout>


    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>